Criada a seção de Em Breve | Mais Populares | Mais No Star+

--- a/index.html
+++ b/index.html
@@ -37,7 +37,80 @@
                 *O preço pode variar caso a assinatura seja feita através de outras plataformas.
             </p>
         </div>
-
     </section>
+    <section class="shows">
+        <nav class="shows__tabs">
+            <button data-tab-button="em_breve" class="shows__tabs__button shows__tabs__button--is-active">
+                Em breve
+            </button>
+            <button data-tab-button="mais_populares" class="shows__tabs__button">
+                Mais populares
+            </button>
+            <button data-tab-button="mais_no_starplus" class="shows__tabs__button">
+                Mais no Star+
+            </button>
+        </nav>
+        <ul data-tab-id="em_breve" class="shows__list shows__list--is-active">
+            <li class="shows__list__item">
+                <img src="./dist/Images/Em Breve/Desencantada.jpg" alt="Desencantada">
+            </li>
+            <li class="shows__list__item">
+                <img src="./dist/Images/Em Breve/Willow.jpg" alt="Willow">
+            </li>
+            <li class="shows__list__item">
+                <img src="./dist/Images/Em Breve/LobisomemNaNoite.jpg" alt="Lobisomem Na Noite">
+            </li>
+            <li class="shows__list__item">
+                <img src="./dist/Images/Em Breve/SpideyESeusAmigosEspetaculares.jpg" alt="Spidey E Seus Amigos Espetaculares">
+            </li>
+            <li class="shows__list__item">
+                <img src="./dist/Images/Em Breve/TheSantaClauses.jpg" alt="The Santa Clauses">
+            </li>
+            <li class="shows__list__item">
+                <img src="./dist/Images/Em Breve/SemLimitesComChrisHemsworth.jpg" alt="Sem Limites Com Chris Hemsworth">
+            </li>
+        </ul>
+        <ul data-tab-id="mais_populares" class="shows__list shows__list--is-active">
+            <li class="shows__list__item">
+                <img src="./dist/Images/Mais Populares/RedCrescerEUmaFera.jpg" alt="Red Crescer E Uma Fera">
+            </li>
+            <li class="shows__list__item">
+                <img src="./dist/Images/Mais Populares/CavaleiroDaLua.jpg" alt="Cavaleiro Da Lua">
+            </li>
+            <li class="shows__list__item">
+                <img src="./dist/Images/Mais Populares/ObiWanKenobi.jpg" alt="Obi Wan Kenobi">
+            </li>
+            <li class="shows__list__item">
+                <img src="./dist/Images/Mais Populares/Bluey.jpg" alt="Bluey">
+            </li>
+            <li class="shows__list__item">
+                <img src="./dist/Images/Mais Populares/TudoIgualSQN.jpg" alt="Tudo Igual SQN">
+            </li>
+            <li class="shows__list__item">
+                <img src="./dist/Images/Mais Populares/OIncrivelDrPol.jpg" alt="O Incrivel Dr Pol">
+            </li>
+        </ul>
+        <ul data-tab-id="mais_no_starplus" class="shows__list shows__list--is-active">
+            <li class="shows__list__item">
+                <img src="./dist/Images/Mais No Star+/ComebolLibertadores.jpg" alt="Comebol Libertadores">
+            </li>
+            <li class="shows__list__item">
+                <img src="./dist/Images/Mais No Star+/OsSimpsons.jpg" alt="OsSimpsons">
+            </li>
+            <li class="shows__list__item">
+                <img src="./dist/Images/Mais No Star+/PremierLeague.jpg" alt="Premier League">
+            </li>
+            <li class="shows__list__item">
+                <img src="./dist/Images/Mais No Star+/TheKardashians.jpg" alt="TheKardashians">
+            </li>
+            <li class="shows__list__item">
+                <img src="./dist/Images/Mais No Star+/Belair.jpg" alt="Belair">
+            </li>
+            <li class="shows__list__item">
+                <img src="./dist/Images/Mais No Star+/NBA.jpg" alt="NBA">
+            </li>
+        </ul>
+    </section>
+    <script src="./src/main.js"></script>
 </body>
 </html>
