Criada a seção Escolha Seu Plano

--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
             <ul class="hero__content__combos">
                 <li class="hero__content__combos__combo">
                     <img src="./dist/Images/Logos/ComboDisneyStarPlus.png" alt="Combo Disney+ E Staz+">
-                    <button>Assine Agora</button>
+                    <button class="button">Assine Agora</button>
                     <span class="text">R$ 45,90/mês*</span>
                 </li>
                 <li class="hero__content__combos__combo">
                     <img src="./dist/Images/Logos/DisneyStarPlusStarzPlay.png" alt="Combo Disney+, Starz+ E Starz Play">
-                    <button>Assine Agora</button>
+                    <button class="button">Assine Agora</button>
                     <span class="text">R$ 55,90/mês*</span>
                 </li>
             </ul>
@@ -110,6 +110,38 @@
                 <img src="./dist/Images/Mais No Star+/NBA.jpg" alt="NBA">
             </li>
         </ul>
+    </section>
+    <section class="plans">
+        <h2 class="title--big">Escolha seu plano</h2>
+        <ul class="plans__list">
+            <li class="plans__list__item">
+                <img src="./dist/Images/Logos/DisneyPlus_.png" alt="Disney+">
+                <strong class="text--small">R$ 27,90/mês</strong>
+                <p class="text--big">
+                    No Disney+ você encontra as últimas estreias do cinema, originais e clássicos inesquecíveis.
+                </p>
+                <button class="button">Assine agora</button>
+            </li>
+            <li class="plans__list__item">
+                <img src="./dist/Images/Logos/ComboDisneyStarPlus.png" alt="Disney+">
+                <strong class="text--small">R$ 45,90/mês</strong>
+                <p class="text--big">
+                    Assine Disney+ e Star+ juntos. Economize e aproveite agora os dois serviços por um preço único.
+                </p>
+                <button class="button">Assine agora</button>
+            </li>
+            <li class="plans__list__item">
+                <img src="./dist/Images/Logos/DisneyStarPlusStarzplay_.png" alt="Disney+">
+                <strong class="text--small">R$ 55,90/mês</strong>
+                <p class="text--big">
+                    Disney+, Star+ e STARZPLAY em um plano especial. Assine agora os três serviços juntos.
+                </p>
+                <button class="button">Assine agora</button>
+            </li>
+        </ul>
+        <p class="text--small">
+            *O preço pode variar caso a assinatura seja feita através de outras plataformas.
+        </p>
     </section>
     <script src="./src/main.js"></script>
 </body>
