--- a/index.html
+++ b/index.html
@@ -8,10 +8,25 @@
     <link rel="stylesheet" href="dist/css/main.css">
 </head>
 <body>
+    <header class="header">
+        <div class="header__container">
+            <h1>
+                <img class="header__logo" src="./dist/images/disneyplus.svg" alt="Disney+">
+            </h1>
+            <ul class="header__links">
+                <li class="header__links__item">
+                    <a href="#" class="button button--secondary">Assine agora</a>
+                </li>
+                <li class="header__links__item">
+                    <a href="#" class="button button--dark">Entrar</a>
+                </li>
+            </ul>
+        </div>
+    </header>
     <section class="hero">
         <div class="hero__content">
             <h1 class="hero__content__branding">
-                <img src="./dist/Images/disneyplus.svg" alt="Logo Da Disney">
+                <img class="header__logo" src="./dist/images/disneyplus.svg" alt="Disney+">
             </h1>
             <h3 class="title--small">
                 As melhores histórias em um só lugar.
@@ -23,12 +38,12 @@
             </p>
             <ul class="hero__content__combos">
                 <li class="hero__content__combos__combo">
-                    <img src="./dist/Images/Logos/ComboDisneyStarPlus.png" alt="Combo Disney+ E Staz+">
+                    <img src="./dist/images/logos/disneyplus_underline.png" alt="Disney+">
                     <button class="button">Assine Agora</button>
                     <span class="text">R$ 45,90/mês*</span>
                 </li>
                 <li class="hero__content__combos__combo">
-                    <img src="./dist/Images/Logos/DisneyStarPlusStarzPlay.png" alt="Combo Disney+, Starz+ E Starz Play">
+                    <img src="./dist/images/logos/disney_star_plus_sm.png" alt="Disney+">
                     <button class="button">Assine Agora</button>
                     <span class="text">R$ 55,90/mês*</span>
                 </li>
@@ -52,62 +67,62 @@
         </nav>
         <ul data-tab-id="em_breve" class="shows__list shows__list--is-active">
             <li class="shows__list__item">
-                <img src="./dist/Images/Em Breve/Desencantada.jpg" alt="Desencantada">
+                <img src="./dist/images/em_breve/desencantada.jpg" alt="Desencantada">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/Images/Em Breve/Willow.jpg" alt="Willow">
+                <img src="./dist/images/em_breve/willow.jpg" alt="Willow">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/Images/Em Breve/LobisomemNaNoite.jpg" alt="Lobisomem Na Noite">
+                <img src="./dist/images/em_breve/lobisomem.jpg" alt="Lobisomem Na Noite">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/Images/Em Breve/SpideyESeusAmigosEspetaculares.jpg" alt="Spidey E Seus Amigos Espetaculares">
+                <img src="./dist/images/em_breve/spidey.jpg" alt="Spidey E Seus Amigos Espetaculares">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/Images/Em Breve/TheSantaClauses.jpg" alt="The Santa Clauses">
+                <img src="./dist/images/em_breve/the_santa_clauses.jpg" alt="The Santa Clauses">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/Images/Em Breve/SemLimitesComChrisHemsworth.jpg" alt="Sem Limites Com Chris Hemsworth">
+                <img src="./dist/images/em_breve/sem_limites.jpg" alt="Sem Limites Com Chris Hemsworth">
             </li>
         </ul>
         <ul data-tab-id="mais_populares" class="shows__list shows__list--is-active">
             <li class="shows__list__item">
-                <img src="./dist/Images/Mais Populares/RedCrescerEUmaFera.jpg" alt="Red Crescer E Uma Fera">
+                <img src="./dist/images/mais_populares/red.jpg" alt="Red Crescer E Uma Fera">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/Images/Mais Populares/CavaleiroDaLua.jpg" alt="Cavaleiro Da Lua">
+                <img src="./dist/images/mais_populares/cavaleira_da_lua.jpg" alt="Cavaleiro Da Lua">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/Images/Mais Populares/ObiWanKenobi.jpg" alt="Obi Wan Kenobi">
+                <img src="./dist/images/mais_populares/obi_wan.jpg" alt="Obi Wan Kenobi">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/Images/Mais Populares/Bluey.jpg" alt="Bluey">
+                <img src="./dist/images/mais_populares/bluey.jpg" alt="Bluey">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/Images/Mais Populares/TudoIgualSQN.jpg" alt="Tudo Igual SQN">
+                <img src="./dist/images/mais_populares/tudo_igual_sqn.jpg" alt="Tudo Igual SQN">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/Images/Mais Populares/OIncrivelDrPol.jpg" alt="O Incrivel Dr Pol">
+                <img src="./dist/images/mais_populares/o_incrivel_dr_pol.jpg" alt="O Incrivel Dr Pol">
             </li>
         </ul>
         <ul data-tab-id="mais_no_starplus" class="shows__list shows__list--is-active">
             <li class="shows__list__item">
-                <img src="./dist/Images/Mais No Star+/ComebolLibertadores.jpg" alt="Comebol Libertadores">
+                <img src="./dist/images/mais_no_star_plus/libertadores.jpg" alt="Comebol Libertadores">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/Images/Mais No Star+/OsSimpsons.jpg" alt="OsSimpsons">
+                <img src="./dist/images/mais_no_star_plus/os_simpson.jpg" alt="Os Simpsons">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/Images/Mais No Star+/PremierLeague.jpg" alt="Premier League">
+                <img src="./dist//images/mais_no_star_plus/premier_league.jpg" alt="Premier League">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/Images/Mais No Star+/TheKardashians.jpg" alt="TheKardashians">
+                <img src="./dist/images/mais_no_star_plus/the_kardashians.jpg" alt="TheKardashians">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/Images/Mais No Star+/Belair.jpg" alt="Belair">
+                <img src="./dist/images/mais_no_star_plus/belair.jpg" alt="Belair">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/Images/Mais No Star+/NBA.jpg" alt="NBA">
+                <img src="./dist/images/mais_no_star_plus/nba.jpg" alt="NBA">
             </li>
         </ul>
     </section>
@@ -115,7 +130,7 @@
         <h2 class="title--big">Escolha seu plano</h2>
         <ul class="plans__list">
             <li class="plans__list__item">
-                <img src="./dist/Images/Logos/DisneyPlus_.png" alt="Disney+">
+                <img src="./dist/images/logos/disneyplus_underline.png" alt="Disney+">
                 <strong class="text--small">R$ 27,90/mês</strong>
                 <p class="text--big">
                     No Disney+ você encontra as últimas estreias do cinema, originais e clássicos inesquecíveis.
@@ -123,7 +138,7 @@
                 <button class="button">Assine agora</button>
             </li>
             <li class="plans__list__item">
-                <img src="./dist/Images/Logos/ComboDisneyStarPlus.png" alt="Disney+">
+                <img src="./dist/images/logos/disney_star_plus.png" alt="Disney+">
                 <strong class="text--small">R$ 45,90/mês</strong>
                 <p class="text--big">
                     Assine Disney+ e Star+ juntos. Economize e aproveite agora os dois serviços por um preço único.
@@ -131,7 +146,7 @@
                 <button class="button">Assine agora</button>
             </li>
             <li class="plans__list__item">
-                <img src="./dist/Images/Logos/DisneyStarPlusStarzplay_.png" alt="Disney+">
+                <img src="./dist/images/logos/disney_star_plus_starzplay.png" alt="Disney+">
                 <strong class="text--small">R$ 55,90/mês</strong>
                 <p class="text--big">
                     Disney+, Star+ e STARZPLAY em um plano especial. Assine agora os três serviços juntos.
@@ -143,6 +158,197 @@
             *O preço pode variar caso a assinatura seja feita através de outras plataformas.
         </p>
     </section>
+    <section class="image-text-section">
+        <img src="./dist/images/tv_pc_tablet_celular.png" alt="Assista do seu jeito">
+        <div class="image-text-section__text_container">
+            <h2 class="title">Assista do seu jeito</h2>
+            <p class="text--big">
+                Aproveite a tela grande da TV ou assista no tablet, laptop, celular e outros aparelhos. Nossa seleção de títulos em 4K não para de crescer. Além disso, para a felicidade de todos, é possível assistir em até 4 telas ao mesmo tempo.
+            </p>
+        </div>
+    </section>
+    <section class="image-text-section image-text-section--image-full-width">
+        <img src="./dist/images/fundo_rei_leao.png" alt="Rei Leão">
+        <div class="image-text-section__text_container image-text-section--image-full-width__text_container">
+            <h2 class="title">Baixe filmes e séries</h2>
+            <p class="text--big">
+                Baixe e assista quando e onde quiser. Assim, seus favoritos estão sempre com você, até mesmo sem internet.
+            </p>
+        </div>
+    </section>
+    <section class="image-text-section image-text-section--image-full-width">
+        <picture>
+            <source media="(max-width: 768px)" srcset="./dist/images/fundo_rei_leao_celular.png" />
+            <img src="./dist/images/fundo_rei_leao.png" alt="Rei Leão">
+        </picture>
+        <div class="image-text-section__text_container image-text-section--image-full-width__text_container">
+            <h2 class="title">Baixe filmes e séries</h2>
+            <p class="text--big">
+                Baixe e assista quando e onde quiser. Assim, seus favoritos estão sempre com você, até mesmo sem internet.
+            </p>
+        </div>
+    </section>
+    <section class="available-devices">
+        <h2 class="title">Disponível nos seus dispositivos favoritos</h2>
+        <ul class="available-devices__list">
+            <li class="available-devices__list__item">
+                <img src="./dist/images/dispositivos/computador.png" alt="Computador">
+                <h4 class="title--small">Computador</h4>
+                <ul class="text">
+                    <li>Chrome OS</li>
+                    <li>MacOS</li>
+                    <li>PC Windows</li>
+                </ul>
+            </li>
+            <li class="available-devices__list__item">
+                <img src="./dist/images/dispositivos/tv.png" alt="Computador">
+                <h4 class="title--small">TV</h4>
+                <ul class="text">
+                    <li>Amazon Fire TV</li>
+                    <li>Android TV</li>
+                    <li>Apple TV</li>
+                    <li>Chromecast</li>
+                    <li>TVs LG</li>
+                    <li>Roku</li>
+                    <li>Samsung</li>
+                </ul>
+            </li>
+            <li class="available-devices__list__item">
+                <img src="./dist/images/dispositivos/videogames.png" alt="Computador">
+                <h4 class="title--small">Videogames</h4>
+                <ul class="text">
+                    <li>PS4</li>
+                    <li>PS5</li>
+                    <li>Xbox One</li>
+                    <li>Xbox Serix X</li>
+                    <li>Xbox Serix S</li>
+                </ul>
+            </li>
+            <li class="available-devices__list__item">
+                <img src="./dist/images/dispositivos/celular.png" alt="Computador">
+                <h4 class="title--small">Celulares e tablets</h4>
+                <ul class="text">
+                    <li>Tablets Amazon Fire</li>
+                    <li>Celulares e Tablets Android</li>
+                    <li>iPhone e iPad</li>
+                </ul>
+            </li>
+        </ul>
+    </section>
+    <section class="faq">
+        <h2 class="title">Perguntas frequentes</h2>
+        <ul class="faq__questions">
+            <li class="faq__questions__item">
+                <div class="faq__questions__item__question" data-faq-question>
+                    O que está incluído no Disney+?
+                </div>
+                <div class="faq__questions__item__answer text--big">
+                    O Disney+ oferece: <br>
+
+                    Experiência de entretenimento exclusiva. <br>
+
+                    As melhores histórias da Disney, Pixar, Marvel, Star Wars e National Geographic, tudo em um só lugar. <br>
+
+                    Downloads ilimitados em até 10 dispositivos compatíveis. <br>
+
+                    Mais de 300 títulos em 4K UHD e HDR. <br>
+
+                    A possibilidade de assistir em até 4 dispositivos compatíveis simultaneamente sem custo adicional. <br>
+
+                    IMAX Enhanced: disponível para alguns títulos da Marvel em dispositivos compatíveis com o Disney+.
+                </div>
+            </li>
+            <li class="faq__questions__item">
+                <div class="faq__questions__item__question" data-faq-question>
+                    Já tem o Disney+ ou o Star+ e quer o Combo+?
+                </div>
+                <div class="faq__questions__item__answer text--big">
+                    Ao assinar o Combo+: <br>
+
+            O valor da sua assinatura existente será descontado do preço do Combo+. <br>
+
+            Se você assina o plano mensal, o valor que você paga mensalmente será descontado do preço do Combo+. <br>
+
+            Se você tem uma assinatura anual do Disney+ cobrada diretamente pelo Disney+, não é possível mudar para o Combo+ no momento. Entre em contato com o suporte do Disney+ para conhecer suas opções. <br>
+
+            Você vai receber um e-mail com os valores detalhados assim que finalizar o pagamento. <br>
+
+            Lembre-se: você pode cancelar a assinatura quando quiser. <br>
+
+            No momento, apenas a assinatura mensal do Combo+ está disponível.
+                </div>
+            </li>
+            <li class="faq__questions__item">
+                <div class="faq__questions__item__question" data-faq-question>
+                    Quais formas de pagamento posso utilizar?
+                </div>
+                <div class="faq__questions__item__answer text--big">
+                    Você pode utilizar: cartão de débito, cartão de crédito, PayPal, Mercado Pago, e também empresas parceiras como Google Play Store, App Store da Apple; Mercado Livre e provedores locais de TV, telefonia e internet.
+                </div>
+            </li>
+            <li class="faq__questions__item">
+                <div class="faq__questions__item__question" data-faq-question>
+                    Como posso ver conteúdo com classificação indicativa até 16 e 18?
+                </div>
+                <div class="faq__questions__item__answer text--big">
+                    Para poder acessar o catálogo completo que inclui conteúdo com classificação indicativa até 16 e 18, todos os usuários do Disney+ na América Latina devem atualizar as configurações de controle parental do perfil. É possível restringir o conteúdo de cada perfil e também adicionar um PIN de bloqueio. Os usuários que preferirem manter a configuração atual vão continuar aproveitando o Disney+ com a classificação indicativa até 14, podendo alterá-la a qualquer momento em "Editar Perfis".
+                </div>
+            </li>
+            <li class="faq__questions__item">
+                <div class="faq__questions__item__question" data-faq-question>
+                    Onde posso assistir ao Disney+?
+                </div>
+                <div class="faq__questions__item__answer text--big">
+                    O aplicativo do Disney+ está disponível em dispositivos móveis, navegadores, videogames, decodificadores e smart TVs. Confira a <a href="#">lista completa de dispositivos compatíveis na Central de ajuda.</a>
+                </div>
+            </li>
+        </ul>
+    </section>
+    <footer class="footer">
+        <div class="footer__container">
+            <img class="footer__logo" src="./dist/images/disneyplus.svg" alt="Disney+">
+            <ul class="footer__links">
+                <li class="footer__links__item">
+                    <div class="language-selector">
+                        <img src="./dist/images/icones/globe.svg" alt="Globo do mundo">
+                        <select>
+                            <option>English</option>
+                            <option selected>Português</option>
+                        </select>
+                    </div>
+                </li>
+                <li class="footer__links__item">
+                    <a href="#" class="text--small">Termos e Condições de Uso</a>
+                </li>
+                <li class="footer__links__item">
+                    <a href="" class="text--small">Política de privacidade</a>
+                </li>
+                <li class="footer__links__item">
+                    <a href="#" class="text--small">Proteção de Dados no Brasil</a>
+                </li>
+                <li class="footer__links__item">
+                    <a href="#" class="text--small">Anúncios personalizados</a>
+                </li>
+                <li class="footer__links__item">
+                    <a href="" class="text--small">
+                        Dispositivos compatíveis
+                    </a>
+                </li>
+                <li class="footer__links__item">
+                    <a href="#" class="text--small">Ajuda</a>
+                </li>
+                <li class="footer__links__item">
+                    <a href="" class="text--small">Sobre o Disney+</a>
+                </li>
+            </ul>
+            <p class="text--small">
+                ® 2024 Disney, Disney+ e The Walt Disney Company. Todos os direitos reservados. Serviço de assinatura paga. Conteúdo sujeito a disponibilidade.
+            </p>
+            <p class="text--small">
+                Disney+ é um serviço pago, baseado em assinatura e sujeito a termos e condições. O serviço Disney+ é comercializado por The Walt Disney Company (Brasil) Ltda., World Trade Center, Av. Das Nações Unidas, 12.551, 12.555, 12.559, Piso 10, São Paulo/SP – CEP 04578-903, Brasil e CNPJ/M 73.042.962/0004-20
+            </p>
+        </div>
+    </footer>
     <script src="./src/main.js"></script>
 </body>
 </html>
